fix black bar on mobile

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body {
 
 }
 
+body, html {
+    overflow-x: hidden;
+}
+
 body .maincontent {
     /*background: linear-gradient(to bottom, #424242, #424242, #000000);*/
     background: linear-gradient(180deg, rgb(25.882% 25.882% 25.882%) 0%, rgb(25.876% 25.876% 25.876%) 6.25%, rgb(25.832% 25.832% 25.832%) 12.5%, rgb(25.712% 25.712% 25.712%) 18.75%, rgb(25.478% 25.478% 25.478%) 25%, rgb(25.092% 25.092% 25.092%) 31.25%, rgb(24.517% 24.517% 24.517%) 37.5%, rgb(23.715% 23.715% 23.715%) 43.75%, rgb(22.647% 22.647% 22.647%) 50%, rgb(21.276% 21.276% 21.276%) 56.25%, rgb(19.563% 19.563% 19.563%) 62.5%, rgb(17.472% 17.472% 17.472%) 68.75%, rgb(14.963% 14.963% 14.963%) 75%, rgb(12% 12% 12%) 81.25%, rgb(8.543% 8.543% 8.543%) 87.5%, rgb(4.556% 4.556% 4.556%) 93.75%, rgb(0% 0% 0%) 100% )
